--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li>Vagrant</li>
     <li>Docker</li>
     <li>Ansible</li>
-    <li>Integração Contínua</li>
+    <li>IntegraçãoContinua: Maturidade e Produtividade n Desenvolvimento de Software</li>
   </ul>
 </body>
 
