--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li>Docker</li>
     <li>Ansible</li>
     <li>IntegraçãoContinua: Maturidade e Produtividade n Desenvolvimento de Software</li>
+    <li>Kubernetes</li>
   </ul>
 </body>
 
