--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <ul>
-    <li>Vagrant</li>
+    <li>Vagrant: Gerenciando máquinas virtuais</li>
     <li>Docker: Criando containers sem dor de cabeça</li>
     <li>Ansible</li>
     <li>IntegraçãoContinua: Maturidade e Produtividade n Desenvolvimento de Software</li>
