Alterando o nome do curso de kubernetes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <li>Ansible</li>
     <li>IntegraçãoContinua: Maturidade e Produtividade n Desenvolvimento de Software</li>
-    <li>Kubernetes</li>
+    <li>Kubernetes: Introdução a orquestração de containers</li>
   </ul>
 </body>
 
