--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <li>Vagrant</li>
 
     <li>Docker: Criando containers sem dor de cabeça</li>
-
-    <li>Ansible</li>
-    <li>IntegraçãoContinua: Maturidade e Produtividade n Desenvolvimento de Software</li>
+    <li>Ansible: Sua infrestrutuca como código</li>
+    <li>Integração Continua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     <li>Kubernetes: Introdução a orquestração de containers</li>
   </ul>
 </body>
