--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h2>Curso de DevOps</h2>
+  <h2>Curso de DevOps:</h2>
 
 
   <dl>
@@ -31,7 +31,7 @@
   </dl>
 
 
-  <h2>Cursos de Linus</h2>
+  <h2>Cursos de Linux:</h2>
   <dl>
     <dt>Linux I</dt>
     <dd>Conhecendo e utilizando o terminal</dd>
@@ -46,7 +46,7 @@
     <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
   </dl>
 
-  <h2>Cursos de Cloud</h2>
+  <h2>Cursos de Cloud:</h2>
   <dl>
     <dt>Amazon EC2</dt>
     <dd>Faça um deploy da sua webapp com alta disponibilidade e escalabilidade</dd>
